--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,19 +1,23 @@
-<h2>Por Pais</h2>
-<hr>
 
-<div class="row">
-    <div class="col">
-        <app-pais-input
-        (onEnter)="buscar($event)"
-        (onDebounce)="sugerencias($event)"
-        placeholder="Buscar País...">
-    </app-pais-input>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Por Pais</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input
+            (onEnter)="buscar($event)"
+            (onDebounce)="sugerencias($event)"
+            placeholder="Buscar País...">
+        </app-pais-input>
+        </div>
     </div>
-</div>
-<hr>
-<div *ngIf="hayError"
-      class="alert alert-danger">
-    No se encontro nada con el termino {{termino}}
+    <hr>
+    <div *ngIf="hayError"
+          class="alert alert-danger">
+        No se encontro nada con el termino {{termino}}
+    </div>
+
 </div>
 
 <div *ngIf="paises.length>0" 
