--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,13 +1,52 @@
-<h2>Por Región</h2>
-<hr>
-
-<div class="row">
-    <div class="col">
-        <form autocomplete="off">
-            <input  type="text"
-                    name="termino"
-                    class="form-control"
-                    placeholder="Buscar Región...">
-        </form>
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h2>Buscar Por Región <small> {{regionActiva | titlecase}}</small></h2>
+    <hr>
+    
+    <h5>Seleccione la región</h5>
+    
+    <div class="row">
+        <div class="col">
+            <!-- [class.btn-primary]="region===regionActiva" -->
+            <!-- [ngClass]="{'btn-primary':regionActiva=== region,
+                    'btn-outline-primary':regionActiva !==region}" -->
+            <button *ngFor="let region of regiones"
+                    [class]="getClaseCSS(region)"
+                    
+                    (click)="activarRegion(region)">
+                {{region| titlecase}}
+            </button>
+        </div>
     </div>
+    
+</div>
+
+<div *ngIf="paises.length > 0" 
+    class="row">
+   <div class="col">
+    <table class="table table-hover animate__animated animate__fadeIn animate__faster">
+        <thead >
+            <tr>
+                <th>#</th>
+                <th>Bandera</th>
+                <th>Nombre</th>
+                <th>Población</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody >
+            <tr *ngFor="let pais of paises; let i=index;">
+                <td>{{i+1}}</td>
+                <td>
+                    <img class="small-flag "
+                    src="{{pais.flags.png}}">                        
+                </td>
+                <td>{{pais.capital}},{{pais.name}}</td>
+                <td>{{pais.population | number}}</td>
+                <td>
+                    <a [routerLink]="['/pais', pais.alpha2Code]">Ver...</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+   </div>
 </div>
