--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -10,14 +10,14 @@
     
     <div class="row">
         <div class="col-12">
-            <h1>Pais: <small>{{pais[0].name.common}}</small></h1>
+            <h1>Pais: <small class="animate__animated animate__rotateInDownRight">{{pais[0].name.common}}</small></h1>
         </div>
     </div>
 
     <div class="row">
         <div class="col-4">
             <h3>Bandera</h3>
-            <img src="{{pais[0].flags.png}}" class="img-thumbnail">
+            <img src="{{pais[0].flags.png}}" class="img-thumbnail animate__animated animate__heartBeat">
         </div>
         <div class="col">
             <h3>Información</h3>
