--- a/src/app/pais/pages/ver-pais/ver-pais.component.html
+++ b/src/app/pais/pages/ver-pais/ver-pais.component.html
@@ -37,7 +37,7 @@
 
     <h3>Traducciones</h3>
     <div class="row">
-        <div class="col">
+        <div class="col-12">
             <span *ngFor="let t of pais[0].translations | keyvalue"
                 class="badge bg-primary mr-1">{{t.value.official}}</span>
         </div>
