--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
 <div class="row container mt-4">
 
-    <div class="col-3">
+    <div 
+        class="col-md-3">
         <app-sidebar></app-sidebar>
     </div>
 
-    <div class="col ">
+    <div class="col-12">
         <router-outlet></router-outlet>
     </div>
 </div>
